# cmake_library

./: CMakeLists.txt
include/: mylib.h
src/: mylib.cpp
